# sopharm

./: .gitignore  .hintrc  db.sqlite3  manage.py  package.json  pnpm-lock.yaml  pyproject.toml
core/: admin.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py
core/partials/: urls.py  views.py
home/: models.py
resources/: admin.py  filters.py  forms.py  models.py
resources/migrations/: 0001_initial.py
sopharm/: urls.py  wsgi.py
sopharm/settings/: base.py  dev.py  production.py
static/js/: main.js  project.js
static/js/libs/: search.js  swiper.js  upload.js  utils.js
static/sass/: _variable.scss  main.scss  project.scss
templates/: base.html
templates/components/: footer.html  header.html  pagination.html
templates/modals/: resources.html
templates/pages/: home.html
templates/pages/components/home/: about.html  alumni.html  events.html  hero.html  news.html  student-life.html
templates/pages/components/resources/: announcement.html  item.html
templates/pages/learning/: resource.html  resources.html
templates/partials/search/: resources.html
webpack/: common.config.js
